--- a/src/app/components/date-picker/date-picker.component.css
+++ b/src/app/components/date-picker/date-picker.component.css
@@ -1,4 +1,4 @@
-::ng-deep.selected-date .mat-calendar-body-cell-content  {
+:host ::ng-deep.selected-date .mat-calendar-body-cell-content  {
     background: #5b15ff !important;
     color: white;
 }
