--- a/src/app/components/date-picker/date-picker.component.html
+++ b/src/app/components/date-picker/date-picker.component.html
@@ -3,7 +3,7 @@
     #calendar
     class="border-b-2 border-gray-100"
     [dateClass]="getSelectedDates()"
-    [minDate]="getToday()"
+    [minDate]="today"
     (selectedChange)="onSelectDate($event, calendar)"
   >
   </mat-calendar>
