--- a/src/app/components/time-picker/time-picker.component.html
+++ b/src/app/components/time-picker/time-picker.component.html
@@ -1,4 +1,4 @@
-<div class="border-2 border-gray-300 rounded-lg p-4">
+<div class="border-2 border-gray-300 rounded-lg p-4 h-96">
   <div class="flex justify-around border-b-1 border-gray-100">
     <input
       type="time"
@@ -13,7 +13,10 @@
       +
     </button>
   </div>
-  <div class="flex flex-col space-y-2 max-h-2">
-    <div *ngFor="let time of times">{{ time }}</div>
+  <div class="flex flex-col space-y-4 h-[90%] max-h-[90%] overflow-y-auto mt-4 bg-gray-50 p-2">
+    <div *ngFor="let time of times" class="bg-white rounded-lg py-2 text-start px-4">
+      <button class="h-full text-white bg-red-500 hover:bg-red-600 px-2 rounded-md">-</button>
+      <span class="inline-block">{{time}}</span>
+    </div>
   </div>
 </div>
