--- a/src/app/components/time-picker/time-picker.component.html
+++ b/src/app/components/time-picker/time-picker.component.html
@@ -2,7 +2,6 @@
   <div class="flex justify-around border-b-1 border-gray-100">
     <input
       type="time"
-      step="1"
       class="w-32 outline pl-1 outline-2 rounded-md outline-gray-100 focus:outline-blue-300 focus:ring-blue-400"
       [(ngModel)]="value"
     />
@@ -13,10 +12,10 @@
       +
     </button>
   </div>
-  <div class="flex flex-col space-y-4 h-[90%] max-h-[90%] overflow-y-auto mt-4 bg-gray-50 p-2">
-    <div *ngFor="let time of times" class="bg-white rounded-lg py-2 text-start px-4">
-      <button class="h-full text-white bg-red-500 hover:bg-red-600 px-2 rounded-md">-</button>
-      <span class="inline-block">{{time}}</span>
+  <div class="flex flex-col space-y-4 h-[19.25rem] overflow-y-auto mt-4 bg-gray-50 p-2">
+    <div *ngFor="let time of times" class="bg-white rounded-lg py-2 px-4 relative">
+      <button class="text-white bg-red-500 hover:bg-red-600 px-2 rounded-3xl absolute left-4">-</button>
+      {{time}}
     </div>
   </div>
 </div>
