--- a/src/app/components/schedule-bdd/schedule-bdd.component.html
+++ b/src/app/components/schedule-bdd/schedule-bdd.component.html
@@ -73,7 +73,7 @@
                       <input
                         id="hs-table-pagination-checkbox-all"
                         type="checkbox"
-                        title="Sélectionner toutes les éléments"
+                        title="Sélectionner tous les éléments"
                         class="w-4 h-4 border-gray-200 rounded text-blue-600 focus:ring-blue-500 dark:bg-gray-800 dark:border-gray-700 dark:checked:bg-blue-500 dark:checked:border-blue-500 dark:focus:ring-offset-gray-800"
                         [checked]="
                           idSchedulesChecked.length == schedules.length &&
@@ -124,8 +124,8 @@
                         type="checkbox"
                         title="Sélectionner l'élément"
                         class="w-4 h-4 border-gray-200 rounded text-blue-600 focus:ring-blue-500 dark:bg-gray-800 dark:border-gray-700 dark:checked:bg-blue-500 dark:checked:border-blue-500 dark:focus:ring-offset-gray-800"
-                        [checked]="idSchedulesChecked.includes(schedule.id)"
-                        (change)="onChangeCheckbox($event, schedule.id)"
+                        [checked]="isChecked(schedule.id)"
+                        (change)="onChangeCheckbox(schedule.id)"
                       />
                       <label
                         for="hs-table-pagination-checkbox-1"
@@ -142,12 +142,12 @@
                   <td
                     class="px-6 py-4 text-md text-gray-800 dark:text-gray-200"
                   >
-                    {{ schedule.message | truncate:92}}
+                    {{ schedule.message | truncate: 92 }}
                   </td>
                   <td
                     class="px-6 py-4 whitespace-nowrap text-md text-gray-800 dark:text-gray-200"
                   >
-                    {{ schedule.dateTime | date : "dd MMMM yyyy ' ' HH:mm:ss" }}
+                    {{ schedule.dateTime | date: "dd MMMM yyyy ' ' HH:mm:ss" }}
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-md font-medium">
                     <button
@@ -336,56 +336,4 @@
     </div>
   </div>
 </div>
-<div
-  class="hs-overlay w-full h-full fixed top-0 start-0 overflow-x-hidden overflow-y-auto"
-  [ngClass]="isAlertAdd ? 'open z-[80]' : 'z-[-10]'"
->
-  <div
-    class="w-full h-full absolute z-[-10] bg-gray-800 opacity-65"
-    [hidden]="!isAlertAdd"
-  ></div>
-  <div
-    class="hs-overlay-open:mt-7 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 mt-0 opacity-0 ease-out transition-all max-w-3xl sm:w-full m-3 sm:mx-auto"
-  >
-    <div
-      class="bg-white border border-gray-200 rounded-xl shadow-sm dark:bg-gray-800 dark:border-gray-700"
-    >
-      <div class="p-4 sm:p-7">
-        <div class="text-center">
-          <h2 class="block text-2xl font-bold text-gray-800 dark:text-gray-200">
-            Ajouter un évènement
-          </h2>
-
-          <!-- Form -->
-          <form class="m-6">
-            <div class="flex justify-between">
-              <app-date-picker class="w-6/12"></app-date-picker>
-              <app-time-picker class="w-5/12"></app-time-picker>
-            </div>
-
-            <div class="mt-4">
-              <div class="flex justify-end gap-x-6">
-                <button
-                  type="button"
-                  class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 text-white bg-blue-500 shadow-sm hover:bg-blue-600 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-white dark:hover:bg-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
-                  data-hs-overlay="#hs-danger-alert"
-                >
-                  Ajouter
-                </button>
-                <button
-                  type="button"
-                  class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-red-500 text-white shadow-sm hover:bg-red-600 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-white dark:hover:bg-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
-                  data-hs-overlay="#hs-danger-alert"
-                  (click)="onCancelAdd()"
-                >
-                  Annuler
-                </button>
-              </div>
-            </div>
-          </form>
-          <!-- End Form -->
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<app-event-modal-add [(isAlertAdd)]="isAlertAdd"></app-event-modal-add>
