--- a/src/app/components/time-picker/time-picker.component.html
+++ b/src/app/components/time-picker/time-picker.component.html
@@ -1,9 +1,9 @@
-<div class="border-2 border-gray-300 rounded-lg p-4 h-96">
-  <div class="flex justify-around border-b-1 border-gray-100">
+<div class="h-full rounded-lg border-2 border-gray-300 p-4">
+  <div class="flex justify-around border-gray-100 border-b-1">
     <input
       type="time"
       class="w-32 outline pl-1 outline-2 rounded-md outline-gray-100 focus:outline-blue-300 focus:ring-blue-400"
-      [(ngModel)]="value"
+      [(ngModel)]="timeEntry"
     />
     <button
       class="rounded-md bg-blue-500 hover:bg-blue-600 text-white text-lg px-2"
@@ -12,10 +12,20 @@
       +
     </button>
   </div>
-  <div class="flex flex-col space-y-4 h-[19.25rem] overflow-y-auto mt-4 bg-gray-50 p-2">
-    <div *ngFor="let time of times" class="bg-white rounded-lg py-2 px-4 relative">
-      <button class="text-white bg-red-500 hover:bg-red-600 px-2 rounded-3xl absolute left-4">-</button>
-      {{time}}
+  <div
+    class="flex flex-col space-y-4 h-[19.25rem] overflow-y-auto mt-4 bg-gray-50 p-2"
+  >
+    <div
+      class="bg-white rounded-lg py-2 px-4 relative"
+      *ngFor="let time of times; let i = index"
+    >
+      <button
+        class="text-white bg-red-500 hover:bg-red-600 px-2 rounded-3xl absolute left-4"
+        (click)="onClickRemoveTime(i)"
+      >
+        -
+      </button>
+      {{ time }}
     </div>
   </div>
 </div>
