--- a/src/app/components/event-modal-add/event-modal-add.component.html
+++ b/src/app/components/event-modal-add/event-modal-add.component.html
@@ -23,11 +23,11 @@
             <div class="flex justify-between">
               <app-date-picker
                 class="w-6/12"
-                (datesChange)="setDates($event)"
+                [(dates)]="dates"
               ></app-date-picker>
               <app-time-picker
                 class="w-5/12"
-                (timesOnChange)="setTimes($event)"
+                [(times)]="times"
               ></app-time-picker>
             </div>
 
