--- a/src/app/views/schedule-bdd/schedule-bdd.component.html
+++ b/src/app/views/schedule-bdd/schedule-bdd.component.html
@@ -13,7 +13,7 @@
                 name="hs-table-with-pagination-search"
                 id="hs-table-with-pagination-search"
                 title="Rechercher un élément"
-                class="py-2 px-3 ps-9 block w-full outline outline-2 outline-gray-100 rounded-lg text-md focus:z-10 focus:outline-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-gray-400 dark:focus:ring-gray-600"
+                class="py-2 px-3 ps-9 block w-full outline outline-2 outline-gray-300 rounded-lg text-md focus:z-10 focus:outline-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-gray-400 dark:focus:ring-gray-600"
                 placeholder="Rechercher..."
               />
               <div
@@ -116,7 +116,7 @@
                 </tr>
               </thead>
               <tbody class="divide-y divide-gray-200 dark:divide-gray-700">
-                <tr *ngFor="let schedule of schedules; let index = index">
+                <tr *ngFor="let schedule of schedulesAll | async; let index = index">
                   <td class="py-3 ps-4">
                     <div class="flex items-center h-5">
                       <input
