--- a/src/app/components/time-picker/time-picker.component.html
+++ b/src/app/components/time-picker/time-picker.component.html
@@ -14,7 +14,7 @@
     </button>
   </div>
   <div
-    class="flex flex-col space-y-4 h-[24vmax] overflow-y-auto mt-4 bg-gray-50 p-2"
+    class="flex flex-col space-y-4 h-[23rem] overflow-y-auto mt-4 bg-gray-50 p-2"
   >
     <div
       class="bg-white rounded-lg py-2 px-4 relative"
