--- a/src/app/views/schedule-bdd/schedule-bdd.component.html
+++ b/src/app/views/schedule-bdd/schedule-bdd.component.html
@@ -103,20 +103,31 @@
                   </th>
                   <th
                     scope="col"
-                    class="px-6 py-3 text-sm font-medium text-gray-500 uppercase"
+                    class="w-52 px-6 py-3 text-sm font-medium text-gray-500 uppercase"
                   >
-                    Date
+                    Dates
                   </th>
                   <th
                     scope="col"
-                    class="px-6 py-3 text-sm font-medium text-gray-500 uppercase"
+                    class="w-36 px-6 py-3 text-sm font-medium text-gray-500 uppercase"
+                  >
+                    Temps
+                  </th>
+                  <th
+                    scope="col"
+                    class="w-32 px-6 py-3 text-sm font-medium text-gray-500 uppercase"
                   >
                     Action
                   </th>
                 </tr>
               </thead>
               <tbody class="divide-y divide-gray-200 dark:divide-gray-700">
-                <tr *ngFor="let schedule of schedulesAll | async; let index = index">
+                <tr
+                  *ngFor="
+                    let schedule of schedulesAll | async;
+                    let index = index
+                  "
+                >
                   <td class="py-3 ps-4">
                     <div class="flex items-center h-5">
                       <input
@@ -147,7 +158,26 @@
                   <td
                     class="px-6 py-4 whitespace-nowrap text-md text-gray-800 dark:text-gray-200"
                   >
-                    {{ schedule.dateTime | date: "dd MMMM yyyy ' ' HH:mm:ss" }}
+                    <div class="max-h-[4rem] overflow-y-auto snap-y">
+                      <ng-container
+                        *ngFor="let date of schedule.dates; let last = last"
+                      >
+                        {{ date | date: "dd MMMM yyyy"
+                        }}<ng-container *ngIf="!last">,<br /></ng-container>
+                      </ng-container>
+                    </div>
+                  </td>
+                  <td
+                    class="px-6 py-4 whitespace-nowrap text-md text-gray-800 dark:text-gray-200"
+                  >
+                    <div class="max-h-[4rem] overflow-y-auto snap-y">
+                      <ng-container
+                        *ngFor="let time of schedule.times; let last = last"
+                      >
+                        {{ time | date: "hh:mm"
+                        }}<ng-container *ngIf="!last">,<br /></ng-container>
+                      </ng-container>
+                    </div>
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-md font-medium">
                     <button
@@ -200,33 +230,33 @@
             <nav class="flex justify-center gap-x-5">
               <button
                 type="button"
-                class="p-2.5 inline-flex items-center gap-x-2 text-md rounded-full text-gray-800 hover:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-white/10"
+                class="p-2.5 inline-flex items-center gap-x-2 text-md rounded-full text-gray-800 hover:bg-blue-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-white/10"
               >
                 <span aria-hidden="true">«</span>
                 <span class="sr-only">Previous</span>
               </button>
               <button
                 type="button"
-                class="min-w-[40px] flex justify-center items-center text-gray-800 hover:bg-gray-100 py-2.5 text-md rounded-full disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-white/10"
+                class="min-w-[40px] bg-blue-500 text-white flex justify-center items-center hover:bg-blue-400 py-2.5 text-md rounded-full disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-white/10"
                 aria-current="page"
               >
                 1
               </button>
               <button
                 type="button"
-                class="min-w-[40px] flex justify-center items-center text-gray-800 hover:bg-gray-100 py-2.5 text-md rounded-full disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-white/10"
+                class="min-w-[40px] flex justify-center items-center text-gray-800 hover:bg-blue-100 py-2.5 text-md rounded-full disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-white/10"
               >
                 2
               </button>
               <button
                 type="button"
-                class="min-w-[40px] flex justify-center items-center text-gray-800 hover:bg-gray-100 py-2.5 text-md rounded-full disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-white/10"
+                class="min-w-[40px] flex justify-center items-center text-gray-800 hover:bg-blue-100 py-2.5 text-md rounded-full disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-white/10"
               >
                 3
               </button>
               <button
                 type="button"
-                class="p-2.5 inline-flex items-center gap-x-2 text-md rounded-full text-gray-800 hover:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-white/10 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
+                class="p-2.5 inline-flex items-center gap-x-2 text-md rounded-full text-gray-800 hover:bg-blue-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-white/10 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
               >
                 <span class="sr-only">Next</span>
                 <span aria-hidden="true">»</span>
