--- a/src/app/views/schedule-bdd/schedule-bdd.component.html
+++ b/src/app/views/schedule-bdd/schedule-bdd.component.html
@@ -76,10 +76,10 @@
                         title="Sélectionner tous les éléments"
                         class="w-4 h-4 border-gray-200 rounded text-blue-600 focus:ring-blue-500 dark:bg-gray-800 dark:border-gray-700 dark:checked:bg-blue-500 dark:checked:border-blue-500 dark:focus:ring-offset-gray-800"
                         [checked]="
-                          idSchedulesChecked.length == schedules.length &&
-                          schedules.length > 0
+                          idSchedulesChecked.length == (schedules | async)?.length &&
+                          ((schedules | async)?.length || false) > 0
                         "
-                        [disabled]="schedules.length === 0"
+                        [disabled]="(schedules | async)?.length === 0"
                         (change)="onChangeAllCheckbox($event)"
                       />
                       <label
@@ -124,7 +124,7 @@
               <tbody class="divide-y divide-gray-200 dark:divide-gray-700">
                 <tr
                   *ngFor="
-                    let schedule of schedulesAll | async;
+                    let schedule of schedules | async;
                     let index = index
                   "
                 >
@@ -204,7 +204,7 @@
                       type="button"
                       title="Supprimer"
                       class="inline-flex items-center gap-x-2 text-md font-semibold rounded-lg border border-transparent text-gray-500 hover:text-red-500 disabled:opacity-50 disabled:pointer-events-none dark:text-gray-300 dark:hover:text-red-400"
-                      (click)="onWantDelete(schedule.id)"
+                      (click)="onWantDeleteById(schedule.id)"
                     >
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -233,12 +233,13 @@
                 class="p-2.5 inline-flex items-center gap-x-2 text-md rounded-full text-gray-800 hover:bg-blue-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-white/10"
               >
                 <span aria-hidden="true">«</span>
-                <span class="sr-only">Previous</span>
+                <span class="sr-only">Précédent</span>
               </button>
               <button
                 type="button"
-                class="min-w-[40px] bg-blue-500 text-white flex justify-center items-center hover:bg-blue-400 py-2.5 text-md rounded-full disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-white/10"
+                class="min-w-[40px] bg-blue-500 text-white flex justify-center items-center hover:bg-blue-400 py-2.5 text-md rounded-full disabled:pointer-events-none dark:text-white dark:hover:bg-white/10"
                 aria-current="page"
+                [disabled]="true"
               >
                 1
               </button>
@@ -258,7 +259,7 @@
                 type="button"
                 class="p-2.5 inline-flex items-center gap-x-2 text-md rounded-full text-gray-800 hover:bg-blue-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-white/10 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
               >
-                <span class="sr-only">Next</span>
+                <span class="sr-only">Suivant</span>
                 <span aria-hidden="true">»</span>
               </button>
             </nav>
@@ -349,7 +350,6 @@
       >
         <button
           class="py-2 px-3 inline-flex items-center gap-x-2 text-sm rounded-lg border border-transparent bg-red-500 text-white hover:bg-red-600 disabled:opacity-50 disabled:pointer-events-none dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
-          href="#"
           (click)="onDeleteSelected()"
         >
           Supprimer
