--- a/src/app/components/date-picker/date-picker.component.html
+++ b/src/app/components/date-picker/date-picker.component.html
@@ -1,15 +1,15 @@
-<div class="border-2 border-gray-300 rounded-lg">
+<div class="h-full border-2 border-gray-300 rounded-lg">
   <mat-calendar
     #calendar
-    class="border-b-2 border-gray-100"
+    class="border-b-2 border-gray-100 mx-auto w-[90%]"
     [dateClass]="initDates()"
     [minDate]="today"
     (selectedChange)="onClickDate($event)"
   >
   </mat-calendar>
-  <div class="flex justify-end mx-4 my-2">
+  <div class="flex justify-end mx-4 h-[15%]">
     <button
-      class="text-white bg-gray-500 hover:bg-gray-600 rounded-md px-4 py-2"
+      class="text-white bg-gray-500 my-2 hover:bg-gray-600 rounded-md px-4 py-2"
       (click)="onClearButton(calendar)"
       [disabled]="isDisabled"
     >
