--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -40,7 +40,7 @@
         </a>
       </li>
 
-      <li class="hs-accordion" [class.active]="collapse" id="users-accordion">
+      <li class="hs-accordion" [class.active]="collapse">
         <button
           type="button"
           (click)="collapse = !collapse"
@@ -115,7 +115,7 @@
                 Évènements
               </button>
             </li>
-            <li class="hs-accordion" id="users-accordion-sub-1">
+            <li class="hs-accordion" id="users-accordion-sub-2">
               <button
                 type="button"
                 routerLink="/database/troll-message"
@@ -130,6 +130,7 @@
     </ul>
     <div class="mt-10">
       <button
+        (click)="logout()"
         class="flex items-center w-full gap-x-3.5 py-2 px-2.5 hover:font-semibold text-slate-700 rounded-lg hover:bg-gray-100 dark:bg-gray-900 dark:text-white dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
       >
         <svg
@@ -146,7 +147,6 @@
             d="M8.25 9V5.25A2.25 2.25 0 0 1 10.5 3h6a2.25 2.25 0 0 1 2.25 2.25v13.5A2.25 2.25 0 0 1 16.5 21h-6a2.25 2.25 0 0 1-2.25-2.25V15m-3 0-3-3m0 0 3-3m-3 3H15"
           />
         </svg>
-
         Se déconnecter
       </button>
     </div>
