--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="isLogged">
-  <main class="lg:w-10/12 ml-auto h-full">
+  <main class="w-full 2xl:w-[85%] xl:w-[82.5%] lg:w-[80%] ml-auto h-full">
     <router-outlet></router-outlet>
   </main>
   <app-sidebar></app-sidebar>
