--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,24 +1,25 @@
 <div
   id="docs-sidebar"
-  class="hs-overlay hs-overlay-open:translate-x-0 -translate-x-full transition-all duration-300 transform hidden fixed top-0 start-0 bottom-0 z-[60] w-2/12 bg-white border-e border-gray-200 pt-5 pb-10 overflow-y-auto lg:block lg:translate-x-0 lg:end-auto lg:bottom-0 [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-slate-700 dark:[&::-webkit-scrollbar-thumb]:bg-slate-500 dark:bg-gray-800 dark:border-gray-700"
+  class="hs-overlay 2xl:w-[15%] xl:w-[17.5%] lg:w-[20%] hs-overlay-open:translate-x-0 -translate-x-full transition-all duration-300 transform hidden fixed top-0 start-0 bottom-0 z-[60] bg-white border-e border-gray-200 pb-10 overflow-y-auto lg:block lg:translate-x-0 lg:end-auto lg:bottom-0 [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-slate-700 dark:[&::-webkit-scrollbar-thumb]:bg-slate-500 dark:bg-gray-800 dark:border-gray-700"
 >
-  <div class="my-3 text-center bg-blue-200 rounded-md w-min px-6 py-2 mx-auto hover:bg-blue-300 ">
+  <header>
     <a
-      class="whitespace-nowrap text-slate-700 text-2xl font-semibold dark:text-white"
+      class="mx-auto p-4 block w-32"
       routerLink="/"
       aria-label="Brand"
     >
-      Administration<br>Jean Kasskouille
+      <img ngSrc="/assets/images/logo-white.png" alt="Logo de l'administration de JeanPetebonbon, un bot discord" title="Logo de l'administration de Jean Petebonbon, un bot discord" class="dark:hidden" height="576" width="413" />
+      <img ngSrc="/assets/images/logo-dark.png" alt="Logo de l'administration de JeanPetebonbon, un bot discord" title="Logo de l'administration de Jean Petebonbon, un bot discord" class="hidden dark:block" height="576" width="413" />
     </a>
-  </div>
+  </header>
   <nav
-    class="hs-accordion-group p-6 w-full flex flex-col flex-wrap text-xl"
+    class="hs-accordion-group py-6 w-full flex flex-col flex-wrap text-xl"
     data-hs-accordion-always-open
   >
     <ul class="space-y-1.5">
       <li>
         <a
-          class="flex items-center gap-x-3.5 py-2 px-2.5 hover:font-semibold text-slate-700 rounded-lg hover:bg-gray-100 dark:bg-gray-900 dark:text-white dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
+          class="flex items-center gap-x-3.5 py-2 px-4 hover:font-semibold text-slate-700 hover:bg-gray-100 dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-300 dark:hover:text-slate-200 dark:hs-accordion-active:text-white dark:focus:outline-none dark:focus:ring-gray-600"
           routerLink="/"
         >
           <svg
@@ -44,7 +45,7 @@
         <button
           type="button"
           (click)="collapse = !collapse"
-          class="hs-accordion-toggle hover:font-semibold hs-accordion-active:text-blue-600 hs-accordion-active:hover:bg-transparent w-full text-start flex items-center gap-x-3.5 py-2 px-2.5 text-slate-700 rounded-lg hover:bg-gray-100 dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-400 dark:hover:text-slate-300 dark:hs-accordion-active:text-white dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
+          class="hs-accordion-toggle hover:font-semibold hs-accordion-active:text-blue-500 w-full text-start flex items-center gap-x-3.5 py-2 px-4 text-slate-700 hover:bg-gray-100 dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-300 dark:hover:text-slate-200 dark:hs-accordion-active:text-white dark:focus:outline-none dark:focus:ring-gray-600"
         >
           <svg
             class="w-5 h-5"
@@ -63,10 +64,10 @@
             <path d="M22 21v-2a4 4 0 0 0-3-3.87" />
             <path d="M16 3.13a4 4 0 0 1 0 7.75" />
           </svg>
-          Gestion de la base de donnée
+          Gestion
 
           <svg
-            class="hs-accordion-active:block ms-auto hidden w-4 h-4 text-gray-600 group-hover:text-gray-500 dark:text-gray-400"
+            class="hs-accordion-active:block ms-auto hidden text-gray-600 group-hover:text-gray-500 dark:text-gray-400 w-5 h-5"
             xmlns="http://www.w3.org/2000/svg"
             width="24"
             height="24"
@@ -81,10 +82,10 @@
           </svg>
 
           <svg
-            class="hs-accordion-active:hidden ms-auto block w-4 h-4 text-gray-600 group-hover:text-gray-500 dark:text-gray-400"
-            width="16"
-            height="16"
-            viewBox="0 0 16 16"
+            class="hs-accordion-active:hidden ms-auto block text-gray-600 group-hover:text-gray-500 dark:text-gray-400 w-5 h-5"
+            width="24"
+            height="24"
+            viewBox="-2 -4 24 24"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
           >
@@ -110,7 +111,7 @@
               <button
                 type="button"
                 routerLink="/database/event"
-                class="hs-accordion-toggle hover:font-semibold hs-accordion-active:text-blue-600 hs-accordion-active:hover:bg-transparent w-full text-start flex items-center gap-x-3.5 py-2 px-2.5 text-slate-700 rounded-lg hover:bg-gray-100 dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-400 dark:hover:text-slate-300 dark:hs-accordion-active:text-white dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
+                class="hs-accordion-toggle hover:font-semibold rounded-l-lg hs-accordion-active:text-blue-600 hs-accordion-active:hover:bg-transparent w-full text-start flex items-center gap-x-3.5 py-2 px-4 text-slate-700 hover:bg-gray-100 dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-400 dark:hover:text-slate-200 dark:hs-accordion-active:text-white dark:focus:outline-none dark:focus:ring-gray-600"
               >
                 Évènements
               </button>
@@ -119,7 +120,7 @@
               <button
                 type="button"
                 routerLink="/database/troll-message"
-                class="hs-accordion-toggle hover:font-semibold hs-accordion-active:text-blue-600 hs-accordion-active:hover:bg-transparent w-full text-start flex items-center gap-x-3.5 py-2 px-2.5 text-slate-700 rounded-lg hover:bg-gray-100 dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-400 dark:hover:text-slate-300 dark:hs-accordion-active:text-white dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
+                class="hs-accordion-toggle hover:font-semibold rounded-l-lg hs-accordion-active:text-blue-600 hs-accordion-active:hover:bg-transparent w-full text-start flex items-center gap-x-3.5 py-2 px-4 text-slate-700 hover:bg-gray-100 dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-400 dark:hover:text-slate-200 dark:hs-accordion-active:text-white dark:focus:outline-none dark:focus:ring-gray-600"
               >
                 Message troll
               </button>
@@ -131,7 +132,7 @@
     <div class="mt-10">
       <button
         (click)="logout()"
-        class="flex items-center w-full gap-x-3.5 py-2 px-2.5 hover:font-semibold text-slate-700 rounded-lg hover:bg-gray-100 dark:bg-gray-900 dark:text-white dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
+        class="flex items-center w-full gap-x-3.5 py-2 px-4 hover:font-semibold text-slate-700 hover:bg-gray-100 dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-300 dark:hover:text-slate-200 dark:hs-accordion-active:text-white dark:focus:outline-none dark:focus:ring-gray-600"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
