--- a/src/auth/components/login/login.component.html
+++ b/src/auth/components/login/login.component.html
@@ -5,7 +5,7 @@
     <div class="h-full px-4 sm:px-7">
       <!-- Form -->
       <form [formGroup]="loginForm" class="h-full flex flex-col justify-center gap-5" (submit)="handleSubmit($event)">
-        <h1 class="text-center dark:text-white">Bienvenue dans l'administration de Jean Kasskouille</h1>
+        <h1 class="text-center dark:text-white">Bienvenue dans l'administration de Jean💥Bonbon</h1>
 
         <!-- Form Group -->
         <div>
