--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,32 +1,32 @@
 <div
   id="docs-sidebar"
-  class="hs-overlay 2xl:w-[15%] xl:w-[17.5%] lg:w-[20%] hs-overlay-open:translate-x-0 -translate-x-full transition-all duration-300 transform hidden fixed top-0 start-0 bottom-0 z-[60] bg-white border-e border-gray-200 pb-10 overflow-y-auto lg:block lg:translate-x-0 lg:end-auto lg:bottom-0 [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-slate-700 dark:[&::-webkit-scrollbar-thumb]:bg-slate-500 dark:bg-gray-800 dark:border-gray-700"
+  class="hs-overlay 2xl:w-[20%] xl:w-[22.5%] w-[25%]  hs-overlay-open:translate-x-0 -translate-x-full transition-all duration-300 transform hidden fixed top-0 start-0 bottom-0 z-[60] bg-white border-e border-gray-200 pt-5 pb-10 overflow-y-auto lg:block lg:translate-x-0 lg:end-auto lg:bottom-0 [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-slate-700 dark:[&::-webkit-scrollbar-thumb]:bg-slate-500 dark:bg-gray-800 dark:border-gray-700"
 >
-  <header>
+  <h1 class="w-min !mx-auto !my-0 bg-blue-400 font-semibold text-white text-center rounded-md">
     <a
-      class="mx-auto p-4 block w-32"
+      class="flex flex-col p-2 outline-blue-500 rounded-md text-2xl hover:text-[1.65rem] hover:leading-[2.2rem] transition-all duration-300"
       routerLink="/"
-      aria-label="Brand"
+      aria-label="Logo de l'administration du bot Jean pète bonbon"
     >
-      <img ngSrc="/assets/images/logo-white.png" alt="Logo de l'administration de JeanPetebonbon, un bot discord" title="Logo de l'administration de Jean Petebonbon, un bot discord" class="dark:hidden" height="576" width="413" />
-      <img ngSrc="/assets/images/logo-dark.png" alt="Logo de l'administration de JeanPetebonbon, un bot discord" title="Logo de l'administration de Jean Petebonbon, un bot discord" class="hidden dark:block" height="576" width="413" />
+      <span>Administration</span>
+      <span class="whitespace-nowrap">Jean💥Bonbon</span>
     </a>
-  </header>
+  </h1>
   <nav
-    class="hs-accordion-group py-6 w-full flex flex-col flex-wrap text-xl"
+    role="navigation"
+    class="hs-accordion-group xl:px-6 lg:px-5 py-4 w-full flex flex-col flex-wrap xl:text-lg lg:text-md"
     data-hs-accordion-always-open
   >
     <ul class="space-y-1.5">
       <li>
         <a
-          class="flex items-center gap-x-3.5 py-2 px-4 hover:font-semibold text-slate-700 hover:bg-gray-100 dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-300 dark:hover:text-slate-200 dark:hs-accordion-active:text-white dark:focus:outline-none dark:focus:ring-gray-600"
+          class="flex outline-blue-500 items-center gap-x-3.5 py-2 px-2.5 group transition-all duration-300 xl:hover:text-xl lg:hover:text-lg text-slate-700 rounded-lg dark:bg-gray-900 dark:text-white dark:focus:outline-blue-500 dark:focus:ring-1 dark:focus:ring-gray-600"
+          [ngClass]="currentRoute === '/' ? 'bg-blue-500 bg-opacity-75 text-white hover:bg-opacity-100' : 'hover:bg-gray-100'"
           routerLink="/"
         >
           <svg
-            class="w-5 h-5"
+            class="h-5 group-hover:h-[1.4rem] transition-all duration-300"
             xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
             viewBox="0 0 24 24"
             fill="none"
             stroke="currentColor"
@@ -45,13 +45,11 @@
         <button
           type="button"
           (click)="collapse = !collapse"
-          class="hs-accordion-toggle hover:font-semibold hs-accordion-active:text-blue-500 w-full text-start flex items-center gap-x-3.5 py-2 px-4 text-slate-700 hover:bg-gray-100 dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-300 dark:hover:text-slate-200 dark:hs-accordion-active:text-white dark:focus:outline-none dark:focus:ring-gray-600"
+          class="hs-accordion-toggle group outline-blue-500 group transition-all duration-300 xl:hover:text-xl lg:hover:text-lg hs-accordion-active:text-blue-600 hs-accordion-active:hover:bg-transparent w-full text-start flex items-center gap-x-3.5 py-2 px-2.5 text-slate-700 rounded-lg dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-400 dark:hover:text-slate-300 dark:hs-accordion-active:text-white dark:focus:outline-blue-500 dark:focus:ring-1 dark:focus:ring-gray-600"
         >
           <svg
-            class="w-5 h-5"
+            class="h-5 group-hover:h-6 transition-all duration-300"
             xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
             viewBox="0 0 24 24"
             fill="none"
             stroke="currentColor"
@@ -64,13 +62,11 @@
             <path d="M22 21v-2a4 4 0 0 0-3-3.87" />
             <path d="M16 3.13a4 4 0 0 1 0 7.75" />
           </svg>
-          Gestion
+          Gestion de la base de donnée
 
           <svg
-            class="hs-accordion-active:block ms-auto hidden text-gray-600 group-hover:text-gray-500 dark:text-gray-400 w-5 h-5"
+            class="hs-accordion-active:block ms-auto hidden h-5 text-gray-600 dark:text-gray-400"
             xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
             viewBox="0 0 24 24"
             fill="none"
             stroke="currentColor"
@@ -82,10 +78,8 @@
           </svg>
 
           <svg
-            class="hs-accordion-active:hidden ms-auto block text-gray-600 group-hover:text-gray-500 dark:text-gray-400 w-5 h-5"
-            width="24"
-            height="24"
-            viewBox="-2 -4 24 24"
+            class="hs-accordion-active:hidden h-4 ms-auto block text-gray-600 dark:text-gray-400"
+            viewBox="0 0 16 16"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
           >
@@ -111,7 +105,8 @@
               <button
                 type="button"
                 routerLink="/database/event"
-                class="hs-accordion-toggle hover:font-semibold rounded-l-lg hs-accordion-active:text-blue-600 hs-accordion-active:hover:bg-transparent w-full text-start flex items-center gap-x-3.5 py-2 px-4 text-slate-700 hover:bg-gray-100 dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-400 dark:hover:text-slate-200 dark:hs-accordion-active:text-white dark:focus:outline-none dark:focus:ring-gray-600"
+                [ngClass]="currentRoute === '/database/event' ? 'bg-blue-500 bg-opacity-75 text-white hover:bg-opacity-100' : 'hover:bg-gray-100'"
+                class="hs-accordion-toggle outline-blue-500 transition-all duration-300 hover:text-xl hs-accordion-active:text-blue-600 hs-accordion-active:hover:bg-transparent w-full text-start flex items-center gap-x-3.5 py-2 px-2.5 text-slate-700 rounded-lg dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-400 dark:hover:text-slate-300 dark:hs-accordion-active:text-white dark:focus:outline-blue-500 dark:focus:ring-1 dark:focus:ring-gray-600"
               >
                 Évènements
               </button>
@@ -119,8 +114,9 @@
             <li class="hs-accordion" id="users-accordion-sub-2">
               <button
                 type="button"
+                [ngClass]="currentRoute === '/database/troll-message' ? 'bg-blue-500 bg-opacity-75 text-white hover:bg-opacity-100' : 'hover:bg-gray-100'"
                 routerLink="/database/troll-message"
-                class="hs-accordion-toggle hover:font-semibold rounded-l-lg hs-accordion-active:text-blue-600 hs-accordion-active:hover:bg-transparent w-full text-start flex items-center gap-x-3.5 py-2 px-4 text-slate-700 hover:bg-gray-100 dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-400 dark:hover:text-slate-200 dark:hs-accordion-active:text-white dark:focus:outline-none dark:focus:ring-gray-600"
+                class="hs-accordion-toggle outline-blue-500 transition-all duration-300 hover:text-xl hs-accordion-active:text-blue-600 hs-accordion-active:hover:bg-transparent w-full text-start flex items-center gap-x-3.5 py-2 px-2.5 text-slate-700 rounded-lg dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-400 dark:hover:text-slate-300 dark:hs-accordion-active:text-white dark:focus:outline-blue-500 dark:focus:ring-1 dark:focus:ring-gray-600"
               >
                 Message troll
               </button>
@@ -129,16 +125,17 @@
         </div>
       </li>
     </ul>
-    <div class="mt-10">
+    <hr class="border-gray-400 dark:border-gray-800 my-5">
+    <div>
       <button
         (click)="logout()"
-        class="flex items-center w-full gap-x-3.5 py-2 px-4 hover:font-semibold text-slate-700 hover:bg-gray-100 dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-300 dark:hover:text-slate-200 dark:hs-accordion-active:text-white dark:focus:outline-none dark:focus:ring-gray-600"
+        class="flex items-center outline-blue-500 w-full gap-x-3.5 py-2 px-2.5 group transition-all duration-300 hover:text-lg text-slate-700 rounded-lg hover:bg-gray-100 dark:bg-gray-900 dark:text-white dark:focus:outline-blue-500 dark:focus:ring-1 dark:focus:ring-gray-600"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
           viewBox="0 0 24 24"
-          class="w-5 h-5"
+          class="h-5 group-hover:h-[1.4rem] transition-all duration-300"
         >
           <path
             stroke-linecap="round"
