--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -2,16 +2,16 @@
   id="docs-sidebar"
   class="hs-overlay 2xl:w-[20%] xl:w-[22.5%] w-[25%]  hs-overlay-open:translate-x-0 -translate-x-full transition-all duration-300 transform hidden fixed top-0 start-0 bottom-0 z-[60] bg-white border-e border-gray-200 pt-5 pb-10 overflow-y-auto lg:block lg:translate-x-0 lg:end-auto lg:bottom-0 [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-slate-700 dark:[&::-webkit-scrollbar-thumb]:bg-slate-500 dark:bg-gray-800 dark:border-gray-700"
 >
-  <h1 class="w-min !mx-auto !my-0 bg-blue-400 font-semibold text-white text-center rounded-md">
+  <header>
     <a
-      class="flex flex-col p-2 outline-blue-500 rounded-md text-2xl hover:text-[1.65rem] hover:leading-[2.2rem] transition-all duration-300"
+      class="mx-auto p-4 block w-32"
       routerLink="/"
-      aria-label="Logo de l'administration du bot Jean pète bonbon"
+      aria-label="Brand"
     >
-      <span>Administration</span>
-      <span class="whitespace-nowrap">Jean💥Bonbon</span>
+      <img ngSrc="/assets/images/logo-white.png" alt="Logo de l'administration de JeanPetebonbon, un bot discord" title="Logo de l'administration de Jean Petebonbon, un bot discord" class="dark:hidden" height="576" width="413" />
+      <img ngSrc="/assets/images/logo-dark.png" alt="Logo de l'administration de JeanPetebonbon, un bot discord" title="Logo de l'administration de Jean Petebonbon, un bot discord" class="hidden dark:block" height="576" width="413" />
     </a>
-  </h1>
+  </header>
   <nav
     role="navigation"
     class="hs-accordion-group xl:px-6 lg:px-5 py-4 w-full flex flex-col flex-wrap xl:text-lg lg:text-md"
@@ -21,7 +21,7 @@
       <li>
         <a
           class="flex outline-blue-500 items-center gap-x-3.5 py-2 px-2.5 group transition-all duration-300 xl:hover:text-xl lg:hover:text-lg text-slate-700 rounded-lg dark:bg-gray-900 dark:text-white dark:focus:outline-blue-500 dark:focus:ring-1 dark:focus:ring-gray-600"
-          [ngClass]="currentRoute === '/' ? 'bg-blue-500 bg-opacity-75 text-white hover:bg-opacity-100' : 'hover:bg-gray-100'"
+          [ngClass]="currentRoute === '/' ? 'bg-blue-500 text-white' : 'hover:bg-gray-100'"
           routerLink="/"
         >
           <svg
@@ -37,7 +37,7 @@
             <path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
             <polyline points="9 22 9 12 15 12 15 22" />
           </svg>
-          Dashboard
+          Tableau de bord
         </a>
       </li>
 
@@ -45,7 +45,8 @@
         <button
           type="button"
           (click)="collapse = !collapse"
-          class="hs-accordion-toggle group outline-blue-500 group transition-all duration-300 xl:hover:text-xl lg:hover:text-lg hs-accordion-active:text-blue-600 hs-accordion-active:hover:bg-transparent w-full text-start flex items-center gap-x-3.5 py-2 px-2.5 text-slate-700 rounded-lg dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-400 dark:hover:text-slate-300 dark:hs-accordion-active:text-white dark:focus:outline-blue-500 dark:focus:ring-1 dark:focus:ring-gray-600"
+          class="hs-accordion-toggle group outline-blue-500 group transition-all duration-300 xl:hover:text-xl lg:hover:text-lg hs-accordion-active:text-blue-600 w-full text-start flex items-center gap-x-3.5 py-2 px-2.5 text-slate-700 rounded-lg dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-400 dark:hover:text-slate-300 dark:hs-accordion-active:text-white dark:focus:outline-blue-500 dark:focus:ring-1 dark:focus:ring-gray-600"
+          [ngClass]="hasRoute('/database/event', '/database/troll-message') ? 'bg-blue-500 text-white hs-accordion-active:text-blue-100' : ''"
         >
           <svg
             class="h-5 group-hover:h-6 transition-all duration-300"
@@ -65,7 +66,7 @@
           Gestion de la base de donnée
 
           <svg
-            class="hs-accordion-active:block ms-auto hidden h-5 text-gray-600 dark:text-gray-400"
+            class="hs-accordion-active:block ms-auto hidden h-5"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24"
             fill="none"
@@ -78,8 +79,8 @@
           </svg>
 
           <svg
-            class="hs-accordion-active:hidden h-4 ms-auto block text-gray-600 dark:text-gray-400"
-            viewBox="0 0 16 16"
+            class="hs-accordion-active:hidden h-4 ms-auto block"
+            viewBox="0 -4 24 24"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
           >
@@ -105,7 +106,7 @@
               <button
                 type="button"
                 routerLink="/database/event"
-                [ngClass]="currentRoute === '/database/event' ? 'bg-blue-500 bg-opacity-75 text-white hover:bg-opacity-100' : 'hover:bg-gray-100'"
+                [ngClass]="currentRoute === '/database/event' ? 'bg-blue-200 bg-opacity-75 hover:bg-opacity-100' : 'hover:bg-gray-100'"
                 class="hs-accordion-toggle outline-blue-500 transition-all duration-300 hover:text-xl hs-accordion-active:text-blue-600 hs-accordion-active:hover:bg-transparent w-full text-start flex items-center gap-x-3.5 py-2 px-2.5 text-slate-700 rounded-lg dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-400 dark:hover:text-slate-300 dark:hs-accordion-active:text-white dark:focus:outline-blue-500 dark:focus:ring-1 dark:focus:ring-gray-600"
               >
                 Évènements
@@ -114,7 +115,7 @@
             <li class="hs-accordion" id="users-accordion-sub-2">
               <button
                 type="button"
-                [ngClass]="currentRoute === '/database/troll-message' ? 'bg-blue-500 bg-opacity-75 text-white hover:bg-opacity-100' : 'hover:bg-gray-100'"
+                [ngClass]="currentRoute === '/database/troll-message' ? 'bg-blue-200 bg-opacity-75 hover:bg-opacity-100' : 'hover:bg-gray-100'"
                 routerLink="/database/troll-message"
                 class="hs-accordion-toggle outline-blue-500 transition-all duration-300 hover:text-xl hs-accordion-active:text-blue-600 hs-accordion-active:hover:bg-transparent w-full text-start flex items-center gap-x-3.5 py-2 px-2.5 text-slate-700 rounded-lg dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-400 dark:hover:text-slate-300 dark:hs-accordion-active:text-white dark:focus:outline-blue-500 dark:focus:ring-1 dark:focus:ring-gray-600"
               >
@@ -125,7 +126,7 @@
         </div>
       </li>
     </ul>
-    <hr class="border-gray-400 dark:border-gray-800 my-5">
+    <hr class="border-gray-400 dark:border-gray-800 my-4">
     <div>
       <button
         (click)="logout()"
