Design and loading :beers:

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="isLogged">
   <app-sidebar></app-sidebar>
-  <main class="2xl:w-[80%] xl:w-[77.5%] lg:w-[75%] ml-auto h-full text-gray-600">
+  <main class="2xl:w-[80%] xl:w-[77.5%] lg:w-[75%] ml-auto h-full">
     <router-outlet></router-outlet>
   </main>
 </ng-container>
