--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,16 @@
    License: none (public domain)
 */
 
+*:focus {
+  outline: none;
+}
+
+@media (forced-colors: active) {
+  *:focus {
+    outline: 0 solid;
+  }
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
