--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -3,14 +3,22 @@
   class="hs-overlay 2xl:w-[20%] xl:w-[22.5%] w-[25%]  hs-overlay-open:translate-x-0 -translate-x-full transition-all duration-300 transform hidden fixed top-0 start-0 bottom-0 z-[60] bg-white border-e border-gray-200 pt-5 pb-10 overflow-y-auto lg:block lg:translate-x-0 lg:end-auto lg:bottom-0 [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-slate-700 dark:[&::-webkit-scrollbar-thumb]:bg-slate-500 dark:bg-gray-800 dark:border-gray-700"
 >
   <header>
-    <a
-      class="mx-auto p-4 block w-32"
-      routerLink="/"
+    <button
+      class="mx-auto p-4 block w-32 focus-visible:outline outline-cyan-400 dark:outline-blue-400"
+      (mousedown)="handleThemeMouseDown()"
+      (mouseup)="handleThemeMouseUp()"
+      (mouseleave)="handleThemeMouseLeave()"
+      (dragstart)="$event.preventDefault()"
+      [class.cursor-wait]="this.mouseTimeOutEvent"
       aria-label="Brand"
     >
-      <img ngSrc="/assets/images/logo-white.png" alt="Logo de l'administration de JeanPetebonbon, un bot discord" title="Logo de l'administration de Jean Petebonbon, un bot discord" class="dark:hidden" height="576" width="413" />
-      <img ngSrc="/assets/images/logo-dark.png" alt="Logo de l'administration de JeanPetebonbon, un bot discord" title="Logo de l'administration de Jean Petebonbon, un bot discord" class="hidden dark:block" height="576" width="413" />
-    </a>
+      <img ngSrc="/assets/images/logo-white.png" alt="Logo de l'administration de JeanPetebonbon, un bot discord"
+           title="Logo de l'administration de Jean Petebonbon, un bot discord" class="dark:hidden" height="576"
+           width="413"/>
+      <img ngSrc="/assets/images/logo-dark.png" alt="Logo de l'administration de JeanPetebonbon, un bot discord"
+           title="Logo de l'administration de Jean Petebonbon, un bot discord" class="hidden dark:block" height="576"
+           width="413"/>
+    </button>
   </header>
   <nav
     role="navigation"
@@ -20,8 +28,8 @@
     <ul class="space-y-1.5">
       <li>
         <a
-          class="flex outline-blue-500 items-center gap-x-3.5 py-2 px-2.5 group transition-all duration-300 xl:hover:text-xl lg:hover:text-lg text-slate-700 rounded-lg dark:bg-gray-900 dark:text-white dark:focus:outline-blue-500 dark:focus:ring-1 dark:focus:ring-gray-600"
-          [ngClass]="currentRoute === '/' ? 'bg-blue-500 text-white' : 'hover:bg-gray-100'"
+          class="flex focus:shadow-focused-color items-center gap-x-3.5 py-2 px-2.5 group transition-all duration-300 xl:hover:text-xl lg:hover:text-lg text-slate-700 rounded-lg dark:text-white"
+          [ngClass]="currentRoute === '/' ? 'bg-blue  -500 dark:bg-blue-700 text-white' : 'hover:bg-gray-100 dark:hover:bg-gray-900'"
           routerLink="/"
         >
           <svg
@@ -34,8 +42,8 @@
             stroke-linecap="round"
             stroke-linejoin="round"
           >
-            <path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
-            <polyline points="9 22 9 12 15 12 15 22" />
+            <path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
+            <polyline points="9 22 9 12 15 12 15 22"/>
           </svg>
           Tableau de bord
         </a>
@@ -45,8 +53,8 @@
         <button
           type="button"
           (click)="collapse = !collapse"
-          class="hs-accordion-toggle group outline-blue-500 group transition-all duration-300 xl:hover:text-xl lg:hover:text-lg hs-accordion-active:text-blue-600 w-full text-start flex items-center gap-x-3.5 py-2 px-2.5 text-slate-700 rounded-lg dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-400 dark:hover:text-slate-300 dark:hs-accordion-active:text-white dark:focus:outline-blue-500 dark:focus:ring-1 dark:focus:ring-gray-600"
-          [ngClass]="hasRoute('/database/event', '/database/troll-message') ? 'bg-blue-500 text-white hs-accordion-active:text-blue-100' : ''"
+          class="hs-accordion-toggle group focus-visible:outline outline-cyan-400 dark:outline-blue-400 group transition-all duration-300 xl:hover:text-xl lg:hover:text-lg w-full text-start flex items-center gap-x-3.5 py-2 px-2.5 text-slate-700 rounded-lg dark:text-white dark:hover:text-slate-300 dark:hs-accordion-active:text-white"
+          [ngClass]="hasRoute('/database/event', '/database/troll-message') ? ' bg-blue-500 dark:bg-blue-700 text-white' : 'hs-accordion-active:bg-blue-100 dark:bg-transparent dark:hover:bg-gray-900 dark:hs-accordion-active:bg-blue-600 dark:hs-accordion-active:bg-opacity-35'"
         >
           <svg
             class="h-5 group-hover:h-6 transition-all duration-300"
@@ -58,10 +66,10 @@
             stroke-linecap="round"
             stroke-linejoin="round"
           >
-            <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2" />
-            <circle cx="9" cy="7" r="4" />
-            <path d="M22 21v-2a4 4 0 0 0-3-3.87" />
-            <path d="M16 3.13a4 4 0 0 1 0 7.75" />
+            <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/>
+            <circle cx="9" cy="7" r="4"/>
+            <path d="M22 21v-2a4 4 0 0 0-3-3.87"/>
+            <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
           </svg>
           Gestion de la base de donnée
 
@@ -75,7 +83,7 @@
             stroke-linecap="round"
             stroke-linejoin="round"
           >
-            <path d="m18 15-6-6-6 6" />
+            <path d="m18 15-6-6-6 6"/>
           </svg>
 
           <svg
@@ -107,7 +115,7 @@
                 type="button"
                 routerLink="/database/event"
                 [ngClass]="currentRoute === '/database/event' ? 'bg-blue-200 bg-opacity-75 hover:bg-opacity-100' : 'hover:bg-gray-100'"
-                class="hs-accordion-toggle outline-blue-500 transition-all duration-300 hover:text-xl hs-accordion-active:text-blue-600 hs-accordion-active:hover:bg-transparent w-full text-start flex items-center gap-x-3.5 py-2 px-2.5 text-slate-700 rounded-lg dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-400 dark:hover:text-slate-300 dark:hs-accordion-active:text-white dark:focus:outline-blue-500 dark:focus:ring-1 dark:focus:ring-gray-600"
+                class="hs-accordion-toggle focus-visible:outline outline-cyan-400 dark:outline-blue-400 transition-all duration-300 hover:text-xl w-full text-start flex items-center gap-x-3.5 py-2 px-2.5 text-slate-700 rounded-lg dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-white dark:hover:text-slate-300"
               >
                 Évènements
               </button>
@@ -117,7 +125,7 @@
                 type="button"
                 [ngClass]="currentRoute === '/database/troll-message' ? 'bg-blue-200 bg-opacity-75 hover:bg-opacity-100' : 'hover:bg-gray-100'"
                 routerLink="/database/troll-message"
-                class="hs-accordion-toggle outline-blue-500 transition-all duration-300 hover:text-xl hs-accordion-active:text-blue-600 hs-accordion-active:hover:bg-transparent w-full text-start flex items-center gap-x-3.5 py-2 px-2.5 text-slate-700 rounded-lg dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-400 dark:hover:text-slate-300 dark:hs-accordion-active:text-white dark:focus:outline-blue-500 dark:focus:ring-1 dark:focus:ring-gray-600"
+                class="hs-accordion-toggle focus-visible:outline outline-cyan-400 dark:outline-blue-400 transition-all duration-300 hover:text-xl hs-accordion-active:text-blue-600 hs-accordion-active:hover:bg-transparent w-full text-start flex items-center gap-x-3.5 py-2 px-2.5 text-slate-700 rounded-lg dark:bg-gray-800 dark:hover:bg-gray-900 dark:text-slate-400 dark:hover:text-slate-300 dark:hs-accordion-active:text-white"
               >
                 Message troll
               </button>
@@ -130,7 +138,7 @@
     <div>
       <button
         (click)="logout()"
-        class="flex items-center outline-blue-500 w-full gap-x-3.5 py-2 px-2.5 group transition-all duration-300 hover:text-lg text-slate-700 rounded-lg hover:bg-gray-100 dark:bg-gray-900 dark:text-white dark:focus:outline-blue-500 dark:focus:ring-1 dark:focus:ring-gray-600"
+        class="flex items-center focus-visible:outline outline-cyan-400 dark:outline-blue-400 w-full gap-x-3.5 py-2 px-2.5 group transition-all duration-300 hover:text-lg text-slate-700 rounded-lg hover:bg-gray-100 dark:bg-gray-900 dark:text-white"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
